@@ -16,23 +16,32 @@
  */
 package org.graylog.failure;
 
+import com.codahale.metrics.Meter;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableList;
-import org.apache.commons.lang3.StringUtils;
-import org.graylog2.indexer.messages.IndexingError;
-import org.graylog2.plugin.Message;
-import org.graylog2.plugin.Tools;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
+import org.graylog2.indexer.messages.Indexable;
+import org.graylog2.indexer.messages.IndexingError;
+import org.graylog2.inputs.diagnosis.InputDiagnosisMetrics;
+import org.graylog2.plugin.Message;
+import org.graylog2.plugin.Tools;
+import org.graylog2.plugin.inputs.failure.InputProcessingException;
+import org.graylog2.plugin.journal.RawMessage;
+import org.graylog2.shared.bindings.providers.ObjectMapperProvider;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
+import java.util.Map;
 
+import static com.codahale.metrics.MetricRegistry.name;
 import static org.graylog2.indexer.messages.IndexingError.Type.MappingError;
+import static org.graylog2.plugin.Message.FIELD_GL2_SOURCE_INPUT;
 
 /**
  * A supplementary service layer, which is aimed to simplify failure
@@ -47,12 +56,20 @@ public class FailureSubmissionService {
     private final FailureSubmissionQueue failureSubmissionQueue;
     private final FailureHandlingConfiguration failureHandlingConfiguration;
 
+    private final InputDiagnosisMetrics inputDiagnosisMetrics;
+    private final ObjectMapper objectMapper;
+    private final Meter dummyMeter = new Meter();
+
     @Inject
     public FailureSubmissionService(
             FailureSubmissionQueue failureSubmissionQueue,
-            FailureHandlingConfiguration failureHandlingConfiguration) {
+            FailureHandlingConfiguration failureHandlingConfiguration,
+            InputDiagnosisMetrics inputDiagnosisMetrics,
+            ObjectMapperProvider objectMapperProvider) {
         this.failureSubmissionQueue = failureSubmissionQueue;
         this.failureHandlingConfiguration = failureHandlingConfiguration;
+        this.inputDiagnosisMetrics = inputDiagnosisMetrics;
+        this.objectMapper = objectMapperProvider.get();
     }
 
     /**
@@ -90,6 +107,8 @@ public class FailureSubmissionService {
         if (processingErrors.isEmpty()) {
             return true;
         }
+
+        updateProcessingFailureMetric(message);
 
         if (!message.supportsFailureHandling()) {
             logger.warn("Submitted a message with processing errors, which doesn't support failure handling!");
@@ -144,6 +163,8 @@ public class FailureSubmissionService {
      */
     public void submitIndexingErrors(Collection<IndexingError> indexingErrors) {
         try {
+            indexingErrors.forEach(ie -> updateIndexingFailureMetric(ie.message()));
+
             final FailureBatch fb = FailureBatch.indexingFailureBatch(
                     indexingErrors.stream()
                             .filter(ie -> {
@@ -155,7 +176,7 @@ public class FailureSubmissionService {
                                 }
                             })
                             .map(this::fromIndexingError)
-                            .collect(Collectors.toList()));
+                            .toList());
 
             if (fb.size() > 0) {
                 failureSubmissionQueue.submitBlocking(fb);
@@ -164,6 +185,35 @@ public class FailureSubmissionService {
         } catch (InterruptedException ignored) {
             logger.warn("Failed to submit {} indexing errors for failure handling. The thread has been interrupted!",
                     indexingErrors.size());
+            Thread.currentThread().interrupt();
+        }
+    }
+
+    public void submitInputFailure(InputProcessingException inputProcessingException, String inputId) {
+        inputDiagnosisMetrics.incCount(name("org.graylog2.inputs", inputId, "failures.input"));
+        try {
+            RawMessage rawMessage = inputProcessingException.getRawMessage();
+            final String messageId = rawMessage.getId().toString();
+
+            final String message = "Failed to process message with id '%s' from input with id '%s': %s".formatted(
+                    StringUtils.isBlank(messageId) ? "UNKNOWN" : messageId,
+                    inputId,
+                    inputProcessingException.getMessage()
+            );
+
+            String rootCauseMessage = ExceptionUtils.getRootCauseMessage(inputProcessingException.getCause());
+            final InputFailure processingFailure = new InputFailure(
+                    InputFailureCause.INPUT_PARSE,
+                    message,
+                    rootCauseMessage.isBlank() ? inputProcessingException.getMessage() : rootCauseMessage,
+                    Tools.nowUTC(),
+                    rawMessage,
+                    inputProcessingException.inputMessage().orElse("")
+            );
+
+            failureSubmissionQueue.submitBlocking(FailureBatch.inputFailureBatch(List.of(processingFailure)));
+        } catch (InterruptedException ignored) {
+            logger.warn("Failed to submit an input failure for failure handling. The thread has been interrupted!");
             Thread.currentThread().interrupt();
         }
     }
@@ -180,5 +230,20 @@ public class FailureSubmissionService {
                 indexingError.message(),
                 indexingError.index()
         );
+    }
+
+    private void updateProcessingFailureMetric(Message message) {
+        Object inputId = message.getField(FIELD_GL2_SOURCE_INPUT);
+        if (inputId != null) {
+            inputDiagnosisMetrics.incCount(name("org.graylog2.inputs", inputId.toString(), "failures.processing"));
+        }
+    }
+
+    private void updateIndexingFailureMetric(Indexable message) {
+        final Map<String, Object> searchObject = message.toElasticSearchObject(objectMapper, dummyMeter);
+        Object inputId = searchObject.get(FIELD_GL2_SOURCE_INPUT);
+        if (inputId != null) {
+            inputDiagnosisMetrics.incCount(name("org.graylog2.inputs", inputId.toString(), "failures.indexing"));
+        }
     }
 }
